--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "config": "^3.0.1",
     "express": "^4.16.4",
     "express-async-errors": "^3.1.1",
+    "fawn": "^2.1.5",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.11",
-    "mysql2": "^1.6.5",
-    "sequelize": "^4.42.0"
+    "mongoose": "^5.4.12"
   }
 }
