--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.11",
-    "mongoose": "^5.4.12"
+    "mongoose": "^5.4.12",
+    "mongoose-paginate-v2": "^1.0.21"
   }
 }
