--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bcrypt": "^3.0.4",
     "body-parser": "^1.18.3",
     "config": "^3.0.1",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-async-errors": "^3.1.1",
     "fawn": "^2.1.5",
