--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "mongoose-dateonly": "^1.0.6",
     "mongoose-paginate-v2": "^1.0.21",
     "mongoose-unique-validator": "^2.0.2",
-    "node-cron": "^2.0.3"
+    "morgan": "^1.9.1",
+    "multer": "^1.4.1",
+    "node-cron": "^2.0.3",
+    "sharp": "^0.22.0"
   }
 }
