--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongoose-unique-validator": "^2.0.2",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
+    "nexmo": "^2.4.1",
     "node-cron": "^2.0.3"
   }
 }
