--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.16.4",
     "express-async-errors": "^3.1.1",
     "fawn": "^2.1.5",
+    "firebase-admin": "^8.0.0",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.11",
@@ -26,6 +27,7 @@
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "nexmo": "^2.4.1",
-    "node-cron": "^2.0.3"
+    "node-cron": "^2.0.3",
+    "node-excel-export": "^1.4.4"
   }
 }
