--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-async-errors": "^3.1.1",
+    "express-fileupload": "^1.1.5",
     "fawn": "^2.1.5",
     "firebase-admin": "^8.0.0",
+    "jimp": "^0.6.4",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.11",
@@ -25,7 +27,6 @@
     "mongoose-paginate-v2": "^1.0.21",
     "mongoose-unique-validator": "^2.0.2",
     "morgan": "^1.9.1",
-    "multer": "^1.4.1",
     "nexmo": "^2.4.1",
     "node-cron": "^2.0.3",
     "node-excel-export": "^1.4.4"
